--- a/html/profile.html
+++ b/html/profile.html
@@ -78,5 +78,8 @@
     
     <!--Custom JavaScript file link-->
     <script src="../js/script.js"></script>
+    
+    <!-- Script Update Profile -->
+    <script src="../js/profile.js"></script>
 </body>
 </html>
